# llm-classifier

./: .gitignore  README.md  manage.py  pyproject.toml
app/: config.py  main.py  manager.py
app/llm/: classifier.py  generator.py  models.py
app/models/: __init__.py  assets.py
app/prompts/: public.py
app/routers/: downloads.py  public.py
app/schemas/: public.py
app/services/: public.py
app/static/: print.css
app/tasks/: classify.py
app/templates/email/: policy.html
app/templates/print/: policy.html  styles.css
app/tools/: parser.py  setup.py
app/utils/: email.py  pdf.py
data/: industries.json  nace-structure.md  scopes.json
